--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone: America/New_York
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://www.itsacoyoteworkshop.com
+url: http://www.itsacoyote.design
 root: /
 permalink: :year/:month/:title/
 permalink_defaults:
